--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,22 @@ services:
       - 8080:8080
     environment:
       - PORT=8080
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=helloworld
     build:
       context: .
       target: dev
     volumes:
       - .:/app
+    depends_on:
+      - redis
 
-
+  redis:
+    image: redis:6.2.6-alpine
+    restart: always
+    ports:
+      - 6379:6379
+    command: redis-server --save 20 1 --loglevel warning --requirepass helloworld
+    volumes:
+      - ./cache:/data
