--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,34 +8,26 @@ env:
   IMAGE_NAME: fake-eta-task:${{ github.run_number }}
 
 jobs:
-  unit-tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
-        with:
-          go-version: "^1.18.2"
-      - name: Run tests
-        run: go test ./...
-
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Build Image
-        run: docker build --target prod -t $IMAGE_NAME .
-
-  golangci:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/setup-go@v3
         with:
           go-version: "^1.18.2"
-      - uses: actions/checkout@v3
+      - name: Generate Clients From Swagger spec
+        run: |
+          docker pull quay.io/goswagger/swagger
+          docker run --rm -v $HOME:$HOME -w $(pwd) quay.io/goswagger/swagger generate client -f ./swagger/car.yml -t ./internal/generated/cars -A cars
+          docker run --rm -v $HOME:$HOME -w $(pwd) quay.io/goswagger/swagger generate client -f ./swagger/predict.yml -t ./internal/generated/prediction -A predict
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
+
+      - name: Run tests
+        run: go test ./...
+
+      - name: Build Image
+        run: docker build --target prod -t $IMAGE_NAME .
